visual bug - app overflowing in mobile

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -19,6 +19,8 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   cursor: default;
+	max-width: 100vw;
+	overflow: hidden;
 }
 
 a,
